New graphs and comparisons

--- a/Evaluating the detection space_Analysis report.Rmd
+++ b/Evaluating the detection space_Analysis report.Rmd
@@ -35,13 +35,19 @@ library("car")
 load('data_all.rda')
 
 #Data Grouped by Snario
-daggByScen <- df %>% filter(Person_Speed<3)%>%group_by(testID,day,Scenario,FOD,Range)%>%summarize(avgSpeed=mean(Person_Speed),medianSpeed=median(Person_Speed),maxSpeed=max(Person_Speed),minSpeed=min(Person_Speed),objectDetected=sum(objDet,na.rm = TRUE),objectCollisions=sum(objColl,na.rm = TRUE),Time=max(Time_in_MS*1000))%>% arrange(testID)
+daggByScen <- df %>% 
+  filter(Person_Speed<3) %>%
+  group_by(testID,day,Scenario,FOD,Range) %>%
+  summarize(avgSpeed=mean(Person_Speed),medianSpeed=median(Person_Speed),maxSpeed=max(Person_Speed),minSpeed=min(Person_Speed),objectDetected=sum(objDet,na.rm = TRUE),objectCollisions=sum(objColl,na.rm = TRUE),Time=max(Time_in_MS*1000)) %>% 
+  arrange(testID)
 
 #add Coloum with sum of total time spent 
 daggByScen$totalTimeTraining<-round(cumsum(daggByScen$Time))
 
 #add Coloum with total time spent for a given FOD with a given Range
-daggByScen <- daggByScen%>%group_by(FOD,day,Range)%>%mutate(timeFDRtrain=round(cumsum(Time)))
+daggByScen <- daggByScen %>%
+  group_by(FOD,day,Range) %>%
+  mutate(timeFDRtrain=round(cumsum(Time)))
 
 #add Coloum with total time spent for a given FOD
 daggByScen <- daggByScen%>%group_by(FOD,day)%>%mutate(timeFDtrain=round(cumsum(Time)))
@@ -233,7 +239,19 @@ qqPlot(daggByScen$Time)
 The p-values show a significant difference and thereby rejects the nullhypothesis of the data follows a normal distributed. For analysing the results further we will be using glm models wiht a Poisson distribution.
 
 
-
+##Training Time
+######Walking speed
+```{r Normal aEMA Spd., echo=FALSE}
+summary(lm(avgSpeed ~ totalTimeTrainingHrs, data=daggByScen))
+```
+#####Object Detected
+```{r Normal aEMA Det., echo=FALSE}
+summary(glm(objectDetected ~ totalTimeTrainingHrs, family="poisson", data=daggByScen))
+```
+#####Object Collisions
+```{r Normal aEMA Det., echo=FALSE}
+summary(glm(objectCollisions ~ totalTimeTrainingHrs, family="poisson", data=daggByScen))
+```
 
 ##Walking speed
 
@@ -253,7 +271,19 @@ summary(lm(avgSpeed ~ Range+totalTimeTrainingHrs,data=corrDat))
 summary(lm(avgSpeed ~ FOD + totalTimeTrainingHrs, data=daggByScen))
 ```
 
+```{r Baseline/aEMA Spd., echo=FALSE}
+summary(lm(avgSpeed ~ FOD*Range + totalTimeTrainingHrs, data=daggByScen))
+```
 
+######Detections
+```{r Body-pr. aEMA Spd., echo=FALSE}
+summary(lm(avgSpeed ~ objectDetected+totalTimeTrainingHrs,data=corrDat))
+```
+
+######Collisions
+```{r Body-pr. aEMA Spd., echo=FALSE}
+summary(lm(avgSpeed ~ objectCollisions+totalTimeTrainingHrs,data=corrDat))
+```
 
 ##Object detections
 
@@ -273,6 +303,19 @@ summary(glm(objectDetected ~ Range+totalTimeTrainingHrs, family="poisson",data=c
 summary(glm(objectDetected ~ FOD + totalTimeTrainingHrs, family="poisson",data=daggByScen))
 ```
 
+```{r Normal aEMA Det., echo=FALSE}
+summary(glm(objectDetected ~ FOD *Range + totalTimeTrainingHrs, family="poisson", data=daggByScen))
+```
+
+######Collisions
+```{r Baseline/aEMA Det., echo=FALSE}
+summary(glm(objectDetected ~ objectCollisions + totalTimeTrainingHrs, family="poisson",data=daggByScen))
+```
+
+######Collisions
+```{r Baseline/aEMA Det., echo=FALSE}
+summary(glm(objectDetected ~ Time + totalTimeTrainingHrs, family="poisson",data=daggByScen))
+```
 
 
 ##Object collisions
@@ -293,9 +336,14 @@ summary(glm(objectCollisions ~ Range+totalTimeTrainingHrs ,family="poisson",data
 summary(glm(objectCollisions ~ FOD + totalTimeTrainingHrs ,family="poisson",data=daggByScen))
 ```
 
+```{r Baseline/aEMA Coll., echo=FALSE}
+summary(glm(objectCollisions ~ FOD*Range + totalTimeTrainingHrs ,family="poisson",data=daggByScen))
+```
 
-
-
+```{r Normal aEMA Coll., echo=FALSE}
+summary(glm(objectCollisions ~ objectDetected
+            +totalTimeTrainingHrs, family="poisson",data=wrDat))
+```
 
 
 
